vendor/bifrost/tls/bindings/x509.odin


	// i2d_re_X509_tbs serializes the TBSCertificate portion of |x509|, as described
	// in |i2d_SAMPLE|.
	//
	// This function re-encodes the TBSCertificate and may not reflect |x509|'s
	// original encoding. It may be used to manually generate a signature for a new
	// certificate. To verify certificates, use |i2d_X509_tbs| instead.
	//
	// Unlike |i2d_X509_tbs|, this function is not |const| and thus may not be to
	// use concurrently with other functions that access |x509|. It mutates |x509|
	// by dropping the cached encoding. This function is intended to be used during
	// certificate construction, where |x509| is still single-threaded and being
	// mutated.
	i2d_re_X509_tbs :: proc(x509: ^X509, outp: ^^u8) -> i32 ---

	// X509_set1_signature_algo sets |x509|'s signature algorithm to |algo| and
	// returns one on success or zero on error. It updates both the signature field
	// of the TBSCertificate structure, and the signatureAlgorithm field of the
	// Certificate.
	X509_set1_signature_algo :: proc(x509: ^X509, algo: ^X509_ALGOR) -> i32 ---

	// X509_set1_signature_value sets |x509|'s signature to a copy of the |sig_len|
	// bytes pointed by |sig|. It returns one on success and zero on error.
	//
	// Due to a specification error, X.509 certificates store signatures in ASN.1
	// BIT STRINGs, but signature algorithms return byte strings rather than bit
	// strings. This function creates a BIT STRING containing a whole number of
	// bytes, with the bit order matching the DER encoding. This matches the
	// encoding used by all X.509 signature algorithms.
	X509_set1_signature_value :: proc(x509: ^X509, sig: ^u8, sig_len: c.size_t) -> i32 ---

	// i2d_X509_AUX marshals |x509| as a DER-encoded X.509 Certificate (RFC 5280),
	// followed optionally by a separate, OpenSSL-specific structure with auxiliary
	// properties. It behaves as described in |i2d_SAMPLE|.
	//
	// Unlike similarly-named functions, this function does not output a single
	// ASN.1 element. Directly embedding the output in a larger ASN.1 structure will
	// not behave correctly.
	i2d_X509_AUX :: proc(x509: ^X509, outp: ^^u8) -> i32 ---

	// d2i_X509_AUX parses up to |length| bytes from |*inp| as a DER-encoded X.509
	// Certificate (RFC 5280), followed optionally by a separate, OpenSSL-specific
	// structure with auxiliary properties. It behaves as described in |d2i_SAMPLE|.
	//
	// WARNING: Passing untrusted input to this function allows an attacker to
	// control auxiliary properties. This can allow unexpected influence over the
	// application if the certificate is used in a context that reads auxiliary
	// properties. This includes PKCS#12 serialization, trusted certificates in
	// |X509_STORE|, and callers of |X509_alias_get0| or |X509_keyid_get0|.
	//
	// Unlike similarly-named functions, this function does not parse a single
	// ASN.1 element. Trying to parse data directly embedded in a larger ASN.1
	// structure will not behave correctly.
	d2i_X509_AUX :: proc(x509: ^^X509, inp: ^^u8, length: c.long) -> ^X509 ---

	// X509_alias_set1 sets |x509|'s alias to |len| bytes from |name|. If |name| is
	// NULL, the alias is cleared instead. Aliases are not part of the certificate
	// itself and will not be serialized by |i2d_X509|. If |x509| is serialized in
	// a PKCS#12 structure, the friendlyName attribute (RFC 2985) will contain this
	// alias.
	X509_alias_set1 :: proc(x509: ^X509, name: ^u8, len: ossl_ssize_t) -> i32 ---

	// X509_keyid_set1 sets |x509|'s key ID to |len| bytes from |id|. If |id| is
	// NULL, the key ID is cleared instead. Key IDs are not part of the certificate
	// itself and will not be serialized by |i2d_X509|.
	X509_keyid_set1 :: proc(x509: ^X509, id: ^u8, len: ossl_ssize_t) -> i32 ---

	// X509_alias_get0 looks up |x509|'s alias. If found, it sets |*out_len| to the
	// alias's length and returns a pointer to a buffer containing the contents. If
	// not found, it outputs the empty string by returning NULL and setting
	// |*out_len| to zero.
	//
	// If |x509| was parsed from a PKCS#12 structure (see
	// |PKCS12_get_key_and_certs|), the alias will reflect the friendlyName
	// attribute (RFC 2985).
	//
	// WARNING: In OpenSSL, this function did not set |*out_len| when the alias was
	// missing. Callers that target both OpenSSL and BoringSSL should set the value
	// to zero before calling this function.
	X509_alias_get0 :: proc(x509: ^X509, out_len: ^i32) -> ^u8 ---

	// X509_keyid_get0 looks up |x509|'s key ID. If found, it sets |*out_len| to the
	// key ID's length and returns a pointer to a buffer containing the contents. If
	// not found, it outputs the empty string by returning NULL and setting
	// |*out_len| to zero.
	//
	// WARNING: In OpenSSL, this function did not set |*out_len| when the alias was
	// missing. Callers that target both OpenSSL and BoringSSL should set the value
	// to zero before calling this function.
	X509_keyid_get0 :: proc(x509: ^X509, out_len: ^i32) -> ^u8 ---

	// X509_add1_trust_object configures |x509| as a valid trust anchor for |obj|.
	// It returns one on success and zero on error. |obj| should be a certificate
	// usage OID associated with an |X509_TRUST_*| constant.
	//
	// See |X509_VERIFY_PARAM_set_trust| for details on how this value is evaluated.
	// Note this only takes effect if |x509| was configured as a trusted certificate
	// via |X509_STORE|.
	X509_add1_trust_object :: proc(x509: ^X509, obj: ^ASN1_OBJECT) -> i32 ---

	// X509_add1_reject_object configures |x509| as distrusted for |obj|. It returns
	// one on success and zero on error. |obj| should be a certificate usage OID
	// associated with an |X509_TRUST_*| constant.
	//
	// See |X509_VERIFY_PARAM_set_trust| for details on how this value is evaluated.
	// Note this only takes effect if |x509| was configured as a trusted certificate
	// via |X509_STORE|.
	X509_add1_reject_object :: proc(x509: ^X509, obj: ^ASN1_OBJECT) -> i32 ---

	// X509_trust_clear clears the list of OIDs for which |x509| is trusted. See
	// also |X509_add1_trust_object|.
	X509_trust_clear :: proc(x509: ^X509) ---

	// X509_reject_clear clears the list of OIDs for which |x509| is distrusted. See
	// also |X509_add1_reject_object|.
	X509_reject_clear :: proc(x509: ^X509) ---
}

sk_X509_CRL_cmp_func           :: proc "c" (^^X509_CRL, ^^X509_CRL) -> i32
sk_X509_CRL_copy_func          :: proc "c" (^X509_CRL) -> ^X509_CRL
sk_X509_CRL_delete_if_func     :: proc "c" (^X509_CRL, rawptr) -> i32
stack_st_X509_CRL              :: struct {}
sk_X509_CRL_free_func          :: proc "c" (^X509_CRL)
sk_X509_REVOKED_cmp_func       :: proc "c" (^^X509_REVOKED, ^^X509_REVOKED) -> i32
sk_X509_REVOKED_copy_func      :: proc "c" (^X509_REVOKED) -> ^X509_REVOKED
sk_X509_REVOKED_delete_if_func :: proc "c" (^X509_REVOKED, rawptr) -> i32
stack_st_X509_REVOKED          :: struct {}
sk_X509_REVOKED_free_func      :: proc "c" (^X509_REVOKED)

@(default_calling_convention="c")
foreign lib {
	// X509_CRL_up_ref adds one to the reference count of |crl| and returns one.
	X509_CRL_up_ref :: proc(crl: ^X509_CRL) -> i32 ---

	// X509_CRL_dup returns a newly-allocated copy of |crl|, or NULL on error. This
	// function works by serializing the structure, so if |crl| is incomplete, it
	// may fail.
	X509_CRL_dup :: proc(crl: ^X509_CRL) -> ^X509_CRL ---

	// X509_CRL_free decrements |crl|'s reference count and, if zero, releases
	// memory associated with |crl|.
	X509_CRL_free :: proc(crl: ^X509_CRL) ---

	// d2i_X509_CRL parses up to |len| bytes from |*inp| as a DER-encoded X.509
	// CertificateList (RFC 5280), as described in |d2i_SAMPLE|.
	d2i_X509_CRL :: proc(out: ^^X509_CRL, inp: ^^u8, len: c.long) -> ^X509_CRL ---

	// i2d_X509_CRL marshals |crl| as a X.509 CertificateList (RFC 5280), as
	// described in |i2d_SAMPLE|.
	i2d_X509_CRL :: proc(crl: ^X509_CRL, outp: ^^u8) -> i32 ---

	// X509_CRL_match compares |a| and |b| and returns zero if they are equal, a
	// negative number if |b| sorts after |a| and a negative number if |a| sorts
	// after |b|. The sort order implemented by this function is arbitrary and does
	// not reflect properties of the CRL such as expiry. Applications should not
	// rely on the order itself.
	//
	// TODO(https://crbug.com/boringssl/355): This function works by comparing a
	// cached hash of the encoded CRL. This cached hash is computed when the CRL is
	// parsed, but not when mutating or issuing CRLs. This function should only be
	// used with |X509_CRL| objects that were parsed from bytes and never mutated.
	X509_CRL_match :: proc(a: ^X509_CRL, b: ^X509_CRL) -> i32 ---
}

X509_CRL_VERSION_1 :: 0
X509_CRL_VERSION_2 :: 1

@(default_calling_convention="c")
foreign lib {
	// X509_CRL_get_version returns the numerical value of |crl|'s version, which
	// will be one of the |X509_CRL_VERSION_*| constants.
	X509_CRL_get_version :: proc(crl: ^X509_CRL) -> c.long ---

	// X509_CRL_get0_lastUpdate returns |crl|'s thisUpdate time. The OpenSSL API
	// refers to this field as lastUpdate.
	X509_CRL_get0_lastUpdate :: proc(crl: ^X509_CRL) -> ^ASN1_TIME ---

	// X509_CRL_get0_nextUpdate returns |crl|'s nextUpdate time, or NULL if |crl|
	// has none.
	X509_CRL_get0_nextUpdate :: proc(crl: ^X509_CRL) -> ^ASN1_TIME ---

	// X509_CRL_get_issuer returns |crl|'s issuer name. Note this function is not
	// const-correct for legacy reasons.
	X509_CRL_get_issuer :: proc(crl: ^X509_CRL) -> ^X509_NAME ---

	// X509_CRL_get0_by_serial finds the entry in |crl| whose serial number is
	// |serial|. If found, it sets |*out| to the entry and returns one. If not
	// found, it returns zero.
	//
	// On success, |*out| continues to be owned by |crl|. It is an error to free or
	// otherwise modify |*out|.
	//
	// TODO(crbug.com/boringssl/600): Ideally |crl| would be const. It is broadly
	// thread-safe, but changes the order of entries in |crl|. It cannot be called
	// concurrently with |i2d_X509_CRL|.
	X509_CRL_get0_by_serial :: proc(crl: ^X509_CRL, out: ^^X509_REVOKED, serial: ^ASN1_INTEGER) -> i32 ---

	// X509_CRL_get0_by_cert behaves like |X509_CRL_get0_by_serial|, except it looks
	// for the entry that matches |x509|.
	X509_CRL_get0_by_cert :: proc(crl: ^X509_CRL, out: ^^X509_REVOKED, x509: ^X509) -> i32 ---

	// X509_CRL_get_REVOKED returns the list of revoked certificates in |crl|, or
	// NULL if |crl| omits it.
	//
	// TODO(davidben): This function was originally a macro, without clear const
	// semantics. It should take a const input and give const output, but the latter
	// would break existing callers. For now, we match upstream.
	X509_CRL_get_REVOKED :: proc(crl: ^X509_CRL) -> ^stack_st_X509_REVOKED ---

	// X509_CRL_get0_extensions returns |crl|'s extension list, or NULL if |crl|
	// omits it. A CRL can have extensions on individual entries, which is
	// |X509_REVOKED_get0_extensions|, or on the overall CRL, which is this
	// function.
	X509_CRL_get0_extensions :: proc(crl: ^X509_CRL) -> ^stack_st_X509_EXTENSION ---

	// X509_CRL_get_ext_count returns the number of extensions in |x|.
	X509_CRL_get_ext_count :: proc(x: ^X509_CRL) -> i32 ---

	// X509_CRL_get_ext_by_NID behaves like |X509v3_get_ext_by_NID| but searches for
	// extensions in |x|.
	X509_CRL_get_ext_by_NID :: proc(x: ^X509_CRL, nid: i32, lastpos: i32) -> i32 ---

	// X509_CRL_get_ext_by_OBJ behaves like |X509v3_get_ext_by_OBJ| but searches for
	// extensions in |x|.
	X509_CRL_get_ext_by_OBJ :: proc(x: ^X509_CRL, obj: ^ASN1_OBJECT, lastpos: i32) -> i32 ---

	// X509_CRL_get_ext_by_critical behaves like |X509v3_get_ext_by_critical| but
	// searches for extensions in |x|.
	X509_CRL_get_ext_by_critical :: proc(x: ^X509_CRL, crit: i32, lastpos: i32) -> i32 ---

	// X509_CRL_get_ext returns the extension in |x| at index |loc|, or NULL if
	// |loc| is out of bounds. This function returns a non-const pointer for OpenSSL
	// compatibility, but callers should not mutate the result.
	X509_CRL_get_ext :: proc(x: ^X509_CRL, loc: i32) -> ^X509_EXTENSION ---
